@@ -1,4 +1,9 @@
 
+shopModx-0.1.0-beta
+========================================
+- Added method ShopmodxResourceProduct::duplicate
+- Minor bugfix
+
 shopModx-0.0.9-beta
 ========================================
 - Removed ShopmodxTemplate class
